examples/bad/wrong_return_type.lk
int f() {
    return "hello";
}

int main() {
    f();
}